<resources>
    <string name="app_name">appa</string>
    <string name="action_settings">Settings</string>
    <string name="mapbox_access_token">sk.eyJ1IjoiaW5kb21pZTg1OCIsImEiOiJja2lyeW4xaDkwNjFzMnFybzltYzRtdzN2In0.SBQy500J1D7HLmM_VJjayg</string>
    <string name="location_list">List of locations</string>
    <string name="home_nav">Home</string>
    <string name="settings_nav">Settings</string>
    <string name="hardware_connection_nav">Connect</string>
    <string name="guide_nav">Guide</string>
    <string name="connect_appa">Connect app-A</string>
    <string name="directory">Directory</string>
    <string name="navigation">Navigation</string>
    <string name="save_location">Save Location</string>
    <string name="bluetooth_title">Bluetooth Connect</string>
    <string name="home_title">Home</string>
    <string name="content_description_map">show map</string>
    <string name="bluetooth_dialog_confirm">Accept</string>
    <string name="bluetooth_dialog_exit">Exit</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_navigation_list">NavigationListActivity</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="preference_key_theme" translatable="false">preference_key_theme</string>
    <string name="preference_theme_title">Theme</string>
    <string name="light_theme_name">Light theme</string>
    <string name="dark_theme_name">Dark theme</string>
    <string name="auto_battery_name">Auto battery</string>
    <string name="follow_system_name">Follow system</string>
    <string name="light_theme_value" translatable="false">Light</string>
    <string name="dark_theme_value" translatable="false">Dark</string>
    <string name="auto_battery_value" translatable="false">Auto-battery</string>
    <string name="follow_system_value" translatable="false">System</string>
    <string name="new_location">New lat: %1$s New longitude: %2$s</string>
    <string name="search_by_name">Search by Name</string>
    <string name="btn_loc_more_info">More Information Button</string>
    <string name="all"></string>
    <string name="restaurants">Restaurants</string>
    <string name="study">Study</string>
    <string name="classrooms">Classrooms</string>
    <string name="Services">Services</string>
    <string name="student_stores">Student Stores</string>
    <string name="fitness">Fitness</string>
    <string name="navigation_core_sdk_title">Navigation Core SDK</string>
    <string name="navigation_core_sdk_description">Hosts examples to demonstrate the use of the core Navigation SDK.</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="stepOne">This is the first step</string>
    <string name="navigation_ui_sdk_title">Navigation UI SDK</string>
    <string name="navigation_ui_sdk_description">Hosts examples to demonstrate the use of the Navigation UI SDK.</string>
    <string name="title_simple_navigation_kotlin">Simple MapboxNavigation Kotlin</string>
    <string name="description_simple_navigation_kotlin">Shows how to use the MapboxNavigation class in Kotlin code.</string>
    <string name="title_navigation_view">NavigationView</string>
    <string name="description_navigation_view">Shows how to use NavigationView to implement turn by turn.</string>
    <string name="title_custom_puck_example">Custom puck</string>
    <string name="description_custom_puck_example">Shows how to use NavigationView with a custom puck.</string>
    <string name="title_custom_camera_example">Custom camera</string>
    <string name="description_custom_camera_example">Shows how to use NavigationView with a custom camera tilt and zoom.</string>
    <string name="title_custom_ui_component_style">Custom UI component style</string>
    <string name="description_custom_ui_component_style">Shows how to use your own colors to style the UI SDK Components: InstructionView, SummaryBottomSheet, and so on.</string>
    <string name="title_building_highlight_kotlin">Building footprint highlight</string>
    <string name="description_building_highlight_kotlin">Use the Navigation UI SDK\'s to show and customize a single highlighted building footprint.</string>
    <string name="title_ui_building_extrusions_kotlin">Building extrusions highlight</string>
    <string name="description_ui_building_extrusions_kotlin">Use the Navigation UI SDK\'s to show and customize a single highlighted 3D building extrusion.</string>
    <string name="title_replay_route">Replay route</string>
    <string name="description_replay_route">Shows how to use the MapboxNavigation class with the replay engine in Kotlin code.</string>
    <string name="replay_playback_speed_seekbar">Replay speed %d</string>
    <string name="title_replay_history_kotlin">Replay history</string>
    <string name="description_replay_history_kotlin">Shows how to use replay ride history in Kotlin code.</string>
    <string name="title_select_replay_history">Select history</string>
    <string name="title_replay_waypoints">Replay waypoints</string>
    <string name="description_replay_waypoints">Shows how to use navigate to waypoints.</string>
    <string name="title_reroute_view">Reroute events</string>
    <string name="description_reroute_view">Shows how to observe off-route events and how to implement custom re-route logic.</string>
    <string name="title_basic_navigation_kotlin">Basic navigation</string>
    <string name="description_basic_navigation_kotlin">Shows how to navigate from the device location to a destination using the MapboxNavigation class.</string>
    <string name="title_basic_navigation_fragment">Basic navigation with Fragment</string>
    <string name="description_basic_navigation_fragment">Shows how to navigate from the device location to a destination using the MapboxNavigation class from a Fragment.</string>
    <string name="title_basic_navigation_sdk_only_kotlin">Basic Navigation + Maps SDK integration</string>
    <string name="description_basic_navigation_sdk_only_kotlin">Shows how to combine the Maps SDK with only the Navigation SDK and no Navigation UI SDK code of any kind.</string>
    <string name="title_free_drive_kotlin">Free drive navigation</string>
    <string name="description_free_drive_kotlin">Shows how to navigate in a free drive scenario using the MapboxNavigation class.</string>
    <string name="title_guidance_view">GuidanceView</string>
    <string name="description_guidance_view">Demonstrates the use of a GuidanceView to show an instructional image at proper junctions.</string>
    <string name="title_junction_snapshot_sample">Snapshotter Sample(POC)</string>
    <string name="description_junction_snapshot_sample">Demonstrates junction view snapshot.</string>
    <string name="title_faster_route">Faster route</string>
    <string name="description_faster_route">Demonstrate how to use the MapboxNavigation class to listen for a faster route.</string>
    <string name="title_summary_bottom_sheet">SummaryBottomSheet</string>
    <string name="description_summary_bottom_sheet">Shows how to integrate SummaryBottomSheet and a recenter button with the Navigation SDK.</string>
    <string name="title_feedback_button">Feedback button</string>
    <string name="description_feedback_button">Shows how to integrate FeedbackButton about the Feedback Flow with the Navigation SDK.</string>
    <string name="title_instruction_view">InstructionView</string>
    <string name="description_instruction_view">Shows how to integrate InstructionView, FeedbackButton and SoundButton with the Navigation SDK.</string>
    <string name="title_debug_navigation_kotlin">Debug MapboxNavigation Kotlin</string>
    <string name="description_debug_navigation_kotlin">Shows debug points for raw(red) and enhanced(blue) location update.</string>
    <string name="title_custom_route_styling_kotlin">Custom Route Styling Kotlin</string>
    <string name="description_custom_route_styling_kotlin">Demonstrates applying a custom style for the routes.</string>
    <string name="title_navigation_view_fragment">NavigationView In A Fragment</string>
    <string name="description_navigation_view_fragment">Shows how to use NavigationView to implement turn by turn in a fragment.</string>
    <string name="title_navigation_route_ui">Navigation Map Route</string>
    <string name="description_navigation_route_ui">An example using NavigationMapRoute</string>
    <string name="title_traffic_toggle">Traffic toggle</string>
    <string name="description_traffic_toggle">Toggle the visibility of the NavigationView\'s traffic congestion layers.</string>
    <string name="title_runtime_styling">Runtime Route Styling</string>
    <string name="description_runtime_styling">An example using RuntimeRouteStyling</string>
    <string name="title_map_matching">Map Matching</string>
    <string name="description_map_matching">Use MapMatching to fetch DirectionsRoute</string>
    <string name="title_route_alerts">Route alerts visualization</string>
    <string name="description_route_alerts">An example of how to request, interpret and display route alerts</string>
    <string name="settings">Settings</string>
    <string name="simulate_route">Simulate Route</string>
    <string name="language">Language</string>
    <string name="unit_type">Unit Type</string>
    <string name="route_profile">Route Profile</string>
    <string name="unit_type_key" translatable="false">unit_type</string>
    <string name="simulate_route_key" translatable="false">simulate_route</string>
    <string name="language_key" translatable="false">language</string>
    <string name="route_profile_key" translatable="false">route_profile</string>
    <string name="default_route_profile" translatable="false">driving-traffic</string>
    <string name="git_hash_key" translatable="false">git_hash</string>
    <string name="nav_native_history_collect_key" translatable="false">nav_native_history_collect</string>
    <string name="nav_native_history_collect">Record history</string>
    <string name="offline_version_key" translatable="false">offline_preference_key</string>
    <string name="offline_enabled" translatable="false">offline_region_download</string>
    <string name="default_locale" translatable="false">default_for_device</string>
    <string name="default_unit_type" translatable="false">default_for_device</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="navigate_waypoints_next_stop">Next stop</string>
    <string name="play_history">Play history</string>
    <string name="select_history">Select history</string>
    <string name="msg_long_press_map_to_place_waypoint">Long press on the map to place a waypoint</string>
    <string name="no_routes">No available routes to that destination</string>
    <string name="steps_in_route">There are %1$d steps in the route</string>
    <string name="route_request_failed">The route request failed</string>
    <string name="offline_category_title">Offline</string>
    <string name="offline_enabled_title">Offline routing enabled</string>
    <string name="offline_version_title">Choose offline version</string>
    <string name="general_category_title">General</string>
    <string name="send_user_feedback">Send User Feedback</string>
</resources>