<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_marginTop="10dp"
      android:layout_marginRight="10dp"
      android:layout_marginBottom="10dp"
      android:layout_weight=".05"
      android:gravity="center_vertical"
      android:text="Welcome to CSUN! Choose a category to list nearby locations."
      android:textAlignment="center"
      android:textColor="@color/text_color"
      android:textSize="24sp"
      android:textStyle="bold"
      tools:ignore="RtlCompat" />


  <GridLayout
      android:id="@+id/grid_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight=".25"
      android:alignmentMode="alignMargins"
      android:columnCount="2"

      android:columnOrderPreserved="false"
      android:rowCount="3">

    <androidx.cardview.widget.CardView
        android:id="@+id/Classrooms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight=".5"
        android:layout_margin="12dp"
        android:contentDescription="@string/classrooms"
        android:onClick="onClickCardView"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@color/card_background_color"
          android:gravity="center"
          android:orientation="vertical"
          android:padding="1dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_school_24"
            android:contentDescription="@string/classrooms" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Classrooms"
            android:textColor="@color/button_text_color"
            android:textSize="15sp"
            android:textStyle="bold" />
      </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/study"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight=".5"
        android:layout_margin="12dp"
        android:contentDescription="@string/study"
        android:onClick="onClickCardView"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@color/card_background_color"
          android:gravity="center"
          android:orientation="vertical"
          android:padding="1dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_laptop_chromebook_24"
            android:contentDescription="@string/study" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Study"
            android:textColor="@color/button_text_color"
            android:textSize="15sp"
            android:textStyle="bold" />
      </LinearLayout>
    </androidx.cardview.widget.CardView>
  </GridLayout>

  <GridLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight=".25"
      android:alignmentMode="alignMargins"
      android:columnCount="2"
      android:columnOrderPreserved="false"
      android:rowCount="3"
      android:visibility="visible">

    <androidx.cardview.widget.CardView
        android:id="@+id/Restaurants"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_rowWeight=".5"
        android:layout_columnWeight=".5"
        android:layout_margin="12dp"
        android:contentDescription="@string/restaurants"
        android:onClick="onClickCardView"
        app:cardBackgroundColor="@color/card_background_color"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@color/card_background_color"
          android:gravity="center"
          android:orientation="vertical"
          android:padding="1dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_restaurant_menu_24"
            android:contentDescription="@string/restaurants" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Restaurants"
            android:textColor="@color/button_text_color"
            android:textSize="15sp"
            android:textStyle="bold" />
      </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Services"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_rowWeight="1"
        android:layout_columnWeight=".5"
        android:layout_margin="12dp"
        android:contentDescription="@string/Services"
        android:onClick="onClickCardView"
        app:cardBackgroundColor="@color/card_background_color"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@color/card_background_color"
          android:gravity="center"
          android:orientation="vertical"
          android:padding="1dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_info_24"
            android:contentDescription="@string/Services" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Services"
            android:textColor="@color/button_text_color"
            android:textSize="15sp"
            android:textStyle="bold" />
      </LinearLayout>
    </androidx.cardview.widget.CardView>
  </GridLayout>

  <GridLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight=".25"
      android:alignmentMode="alignMargins"
      android:columnCount="2"
      android:columnOrderPreserved="false"
      android:rowCount="3">

    <androidx.cardview.widget.CardView
        android:id="@+id/Student_Stores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight=".5"
        android:layout_margin="12dp"
        android:contentDescription="@string/student_stores"
        android:onClick="onClickCardView"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@color/card_background_color"
          android:gravity="center"
          android:orientation="vertical"
          android:padding="1dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_store_24"
            android:contentDescription="@string/student_stores" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Student Stores"
            android:textColor="@color/button_text_color"
            android:textSize="15sp"
            android:textStyle="bold" />

      </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Fitness"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight=".5"
        android:layout_margin="12dp"
        android:contentDescription="@string/Fitness"
        android:onClick="onClickCardView"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@color/card_background_color"
          android:gravity="center"
          android:orientation="vertical"
          android:padding="1dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_fitness_center_24"
            android:contentDescription="@string/Fitness" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text="Fitness"
            android:textColor="@color/button_text_color"
            android:textSize="15sp"
            android:textStyle="bold" />

      </LinearLayout>
    </androidx.cardview.widget.CardView>
  </GridLayout>

  <GridLayout
      android:id="@+id/view_all_grid"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight=".25"
      android:alignmentMode="alignMargins"
      android:columnCount="1"

      android:columnOrderPreserved="false"
      android:rowCount="3">

    <androidx.cardview.widget.CardView
        android:id="@+id/view_all_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="12dp"
        android:contentDescription="@string/all"
        android:onClick="onClickCardView"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@color/card_background_color"
          android:gravity="center"
          android:padding="1dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="All Locations"
            android:textColor="@color/button_text_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/all"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />

      </LinearLayout>
    </androidx.cardview.widget.CardView>

  </GridLayout>

</LinearLayout>